--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,6 @@
-dependencies:
-  override:
-    - git submodule foreach 'git checkout master; git pull'
+# dependencies:
+#   override:
+#     - git submodule foreach 'git checkout master; git pull'
 
 test:
   override:
