--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/kn1kn1/sonic-pi-ja-lint#readme",
   "devDependencies": {
     "textlint": "^7.2.1",
-    "textlint-rule-preset-jtf-style": "^2.2.3"
+    "textlint-rule-max-ten": "^2.0.3",
+    "textlint-rule-no-mix-dearu-desumasu": "^3.0.3",
+    "textlint-rule-preset-jtf-style": "^2.2.3",
+    "textlint-rule-spellcheck-tech-word": "^5.0.0"
   }
 }
