--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "textlint-rule-max-ten": "^2.0.3",
     "textlint-rule-no-mix-dearu-desumasu": "^3.0.3",
     "textlint-rule-preset-jtf-style": "^2.2.3",
+    "textlint-rule-prh": "^3.1.3",
     "textlint-rule-spellcheck-tech-word": "^5.0.0"
   }
 }
