Change to output junit style report

--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,10 @@ test:
   override:
     - ./exec-lint.sh
 
+  post:
+    - mkdir -p $CIRCLE_TEST_REPORTS/junit/
+    - cp -p report.xml $CIRCLE_TEST_REPORTS/junit/;
+
+Mocha for Node.js
 # machine:
 #   environment:
