--- a/circle.yml
+++ b/circle.yml
@@ -1,13 +1,14 @@
-# dependencies:
-#   override:
-#     - git submodule foreach 'git checkout master; git pull'
-# checkout:
-#   post:
-#     - git submodule foreach 'git checkout master; git pull'
+checkout:
+  post:
+    - git submodule init
+    - git submodule update
+    - git submodule foreach 'git checkout master; git pull'
+    - ls -al
+    - sonic-pi/app/server/bin/i18n-tool.rb -t
 
 test:
   override:
-    - ./exec-lint.sh
+    - node_modules/.bin/textlint -f junit -o report.xml sonic-pi/etc/doc/generated/ja/tutorial
 
   post:
     - mkdir -p $CIRCLE_TEST_REPORTS/junit/
