Change to lint the latest translation

--- a/circle.yml
+++ b/circle.yml
@@ -2,8 +2,9 @@ checkout:
   post:
     - git submodule init
     - git submodule update
-    - git submodule foreach 'git checkout master; git pull'
+    - git submodule foreach 'git checkout master -- .; git pull origin master'
     - ls -al
+    - curl https://hosted.weblate.org/download/sonic-pi/tutorial/ja/ -o sonic-pi/etc/doc/lang/sonic-pi-tutorial-ja.po
     - sonic-pi/app/server/bin/i18n-tool.rb -t
 
 test:
