--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,7 @@
 checkout:
   post:
-    - git submodule init
-    - git submodule update
-    - git submodule foreach 'git reset --hard HEAD; git checkout master -- .; git pull origin master'
+    - rm -rf sonic-pi
+    - git clone https://github.com/samaaron/sonic-pi.git
     - ls -al
     - curl https://hosted.weblate.org/download/sonic-pi/tutorial/ja/ -o sonic-pi/etc/doc/lang/sonic-pi-tutorial-ja.po
     - sonic-pi/app/server/bin/i18n-tool.rb -t
