--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,7 @@ jobs:
       - run: npm install
       - run: ls -al
       - run: rm -rf sonic-pi
+      - run: git clone https://github.com/samaaron/sonic-pi.git
+      - run: curl https://hosted.weblate.org/download/sonic-pi/tutorial/ja/ -o sonic-pi/etc/doc/lang/sonic-pi-tutorial-ja.po
+      - run: sonic-pi/app/server/ruby/bin/i18n-tool.rb -t
+      - run: node_modules/.bin/textlint -f junit -o report.xml sonic-pi/etc/doc/generated/ja/tutorial
