--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  lint:
+  build:
     branches:
       only:
         - feature/circleci-v2
@@ -30,7 +30,7 @@ workflows:
   version: 2
   commit:
     jobs:
-      - lint
+      - build
   nightly:
     triggers:
       - schedule:
@@ -40,4 +40,4 @@ workflows:
               only:
                 - feature/circleci-v2
     jobs:
-      - lint
+      - build
